# credit-risk-intelligence-platform

./: .gitignore  Dockerfile  README.md  locustfile.py  pyproject.toml  requirements-spark.txt  requirements.txt  run_pipeline.py
.github/workflows/: ci.yml  deploy.yml
configs/: config.yaml
credit-risk-intelligence-platform/: README.md  docker-compose.yml  requirements.txt
credit-risk-intelligence-platform/.github/workflows/: ci.yml
credit-risk-intelligence-platform/docs/: architecture.md  governance.md
credit-risk-intelligence-platform/src/api/: main.py
credit-risk-intelligence-platform/src/dashboard/: app.py
credit-risk-intelligence-platform/src/data_generation/: generate_synthetic_data.py
credit-risk-intelligence-platform/src/explainability/: shap_analysis.py
credit-risk-intelligence-platform/src/models/: train.py  (+2 more)
credit-risk-intelligence-platform/tests/: test_features.py  test_model.py
data/sample/: feature_table_sample.csv
deploy/aws/: README.md  ecs-task-definition.json
docs/: model_card.md
reports/: final_project_report.md  model_comparison.csv  portfolio_summary.json  stress_test_results.json
scripts/: generate_charts.py  retrain_if_drift.py  run_pipeline.py
sql/: portfolio_queries.sql
src/api/: main.py
src/dashboard/: app.py
src/data_generation/: generate_synthetic_data.py
src/models/: evaluate.py  model_registry.py  predict.py  survival_model.py  train.py
src/monitoring/: drift_detection.py
src/pipelines/: feature_pipeline.py  preprocessing.py
src/risk/: stress_testing.py
tests/: test_expected_loss.py  test_model.py
(+3 files in other folders)
