[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "credit-risk-intelligence-platform"
version = "1.0.0"
description = "End-to-end credit risk ML platform with default prediction, stress testing, and monitoring"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.flake8]
max-line-length = 120
ignore = ["E501", "W503", "E203"]
